@@ -33,18 +33,35 @@
 #ifndef ITSIGNAL_H
 #define ITSIGNAL_H
 
-//! \defgroup signal Signal Processing Module
-//@{
-//! \defgroup dct Discrete Cosine Transform (DCT)
+/*!
+ * \defgroup signal Signal Processing Module
+ * @{
+ */
+
 //! \defgroup detsource Deterministic Sources
-//! \defgroup fft Fast Fourier Transform (FFT)
-//! \defgroup fht Fast Hadamard Transform (FHT)
 //! \defgroup fastica Fast Independent Component Analysis
 //! \defgroup filters Filtering
 //! \defgroup poly Polynomial Functions
 //! \defgroup sigproc Signal Processing
+
+/*!
+ * \defgroup transforms Transforms
+ * @{
+ */
+
+//! \defgroup dct Discrete Cosine Transform (DCT)
+//! \defgroup fft Fast Fourier Transform (FFT)
+//! \defgroup fht Fast Hadamard Transform (FHT)
+
+/*!
+ * @}
+ */
+
 //! \defgroup windfunc Windowing
-//@}
+
+/*!
+ * @}
+ */
 
 #include <itpp/itbase.h>
 #include <itpp/signal/fastica.h>
