@@ -33,13 +33,19 @@
 #ifndef ITSRCCODE_H
 #define ITSRCCODE_H
 
-//! \defgroup srccode Source Coding Module
-//@{
+/*!
+ * \defgroup srccode Source Coding Module
+ * @{
+ */
+
 //! \defgroup audio Audio
 //! \defgroup image Image Functions and Classes
 //! \defgroup lpc LPC-related Functions
 //! \defgroup sourcecoding Source Coding Routines
-//@}
+
+/*!
+ * @}
+ */
 
 #include <itpp/itsignal.h>
 #include <itpp/srccode/audiofile.h>
